adding employee names

--- a/index.html
+++ b/index.html
@@ -35,28 +35,29 @@
                         <th scope="col">Employee Name</th>
                         <th scope="col">Role</th>
                         <th scope="col">Start Date</th>
+                        
                         <th scope="col">Monthly Rate ()</th>
-                        <th scope="col">Total Billed ()</th>
+                        <!-- <th scope="col">Total Billed ()</th> -->
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
+                        <th scope="row">Jadan Morrow</th>
+                        <td>Software Developer</td>
+                        <td>1-16-17</td>
+                        <td>1,000,000</td>
                       </tr>
                       <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
+                        <th scope="row">Joe Brozinski</th>
+                        <td>Full Stack Developer</td>
+                        <td>3-25-19</td>
+                        <td>25,000,000</td>
                       </tr>
                       <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
+                        <th scope="row">Kilea</th>
+                        <td>Front End Developer</td>
+                        <td>8-10-20</td>
+                        <td>1,000,000,000</td>
                       </tr>
                     </tbody>
                   </table>
