--- a/index.html
+++ b/index.html
@@ -101,8 +101,13 @@
           </div>
           <div class="form-group">Start Date (MM/DD/YYYY)
             <label for="exampleFormControlSelect2"></label>
-            <select multiple class="form-control" id="exampleFormControlSelect2">
-            </select>
+            <input
+              type="role"
+              class="form-control"
+              id="search-term"
+              placeholder=""
+            />
+            
           </div>
           <div class="form-group">
             <label for="exampleFormControlTextarea1">Monthly Rate</label>
